# eds-tools

./: .bzrignore  ChangeLog  Makefile.am  configure.ac
dummy-ebook/: Makefile.am  e-book-backend-dummy-factory.c  e-book-backend-dummy.c  e-book-backend-dummy.h
monitor/: Makefile.am  TODO  eds-contact-view.c  eds-contact-view.h  eds-event-view.c  eds-event-view.h  main.c
src/: Makefile.am  eds-add-remove.c  eds-bookview.c  eds-edit-vcard.c
tools/: Makefile.am  eds-add-remove.c  eds-add.c  eds-bookview.c  eds-get-contacts.c  eds-get-vcard.c  eds-remove.c  util.c  util.h
